--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     background: #fff;
-    transition: width 0.3s, border-radius 0.3s, background 0.3s, backdrop-filter 0.3s, margin-top 0.3s;
+    transition: width 0.8s, border-radius 0.3s, background 0.3s, backdrop-filter 0.3s, margin-top 0.3s;
     z-index: 1000;
   }
   
@@ -19,6 +19,7 @@
     background: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(3px);
     margin-top: 10px;
+    transition: width 0.8s;
   }
   
   .nav {
@@ -28,6 +29,7 @@
     width: 100%;
     max-width: 1200px;
     padding: 6px 20px;
+
   }
   
   .menu {
