--- a/src/components/Buttons/Button.css
+++ b/src/components/Buttons/Button.css
@@ -1,19 +1,36 @@
-button {
-  border: 1px solid #eb1933;
+/* button {
+  border: 1px solid #946feb;
   border-radius: 6px; 
-  background-color: white; 
-  color: #946feb; 
+  background-color: black; 
+  color: white; 
   padding: 8px 22px;
-  width: auto;
-  height: auto;
+  width: 40px;
+  height: 50px;
   font-size: 14px; 
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
+} */
+button {
+  display: flex;
+}
+
+button {
+  margin-left: 10px;
+  padding: 8px 20px;
+  border: none;
+  background-color: #F59300;
+  color: white;
+  cursor: pointer;
+  border-radius: 50px;
+  transition: background-color 0.3s;
 }
 
 button:hover {
-/* background-color: #f5f5f5;  */
-background-color: #eb1933 !important;
-color: white !important;
+  background-color: #ce7d02;
+} 
+
+button:focus {
+  outline: 2px solid #F59300;
+  outline-offset: 2px;
 }
