--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 
 
 .header {
+  font-weight: 500;
   position: fixed;
   top: 0;
   left: 50%;
@@ -17,7 +18,7 @@
 .header.scrolled {
   width: 80%;
   border-radius: 50px;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px); 
   margin-top: 10px;
@@ -48,7 +49,7 @@
   transition: color 0.3s;
 }
 
-.menu li::after {
+/* .menu li::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -66,11 +67,16 @@
 
 .menu li:hover {
   color: #F59300;
-}
+} */
+
+
 
 .logo {
   font-size: 24px;
   font-weight: bold;
+  width: 250px;
+  background-color: aquamarine;
+
 }
 
 /* .cta-buttons {
