--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -75,7 +75,7 @@
   font-size: 24px;
   font-weight: bold;
   width: 250px;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
 
 }
 
