--- a/src/components/Landing page/ImageStyles.css
+++ b/src/components/Landing page/ImageStyles.css
@@ -1,22 +1,3 @@
-/* ImageStyles.css */
-
-/* .icon-img {
-    width: 50px;
-    margin-bottom: 10px;
-   
-}
-
-.hero-image {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 5px solid #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-} */
-
-/* ImageStyles.css */
-
 .icon-img {
     width: 50px;
     margin-bottom: 10px;
@@ -24,9 +5,48 @@
 }
 
 .hero-image {
-    width: 230px;
-    height: 230px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border: 5px solid #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.img-rounded {
+    width: 230px;
+    height: 230px;
+  
+    object-fit: cover;
+    border: 5px solid #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    animation-duration: 6s;
+    animation-delay: 0s; 
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+/* Animation for ImageComponent with initial borderRadius '50%' */
+@keyframes border-radius-animation-50 {
+    0% {
+        border-radius: 50%;
+    }
+    50% {
+        border-radius: 0px 94px;
+    }
+    100% {
+        border-radius: 50%;
+    }
+}
+
+/* Animation for ImageComponent with initial borderRadius '94px 0px' */
+@keyframes border-radius-animation-94 {
+    0% {
+        border-radius: 94px 0px;
+    }
+    50% {
+        border-radius: 50%;
+    }
+    100% {
+        border-radius: 94px 0px;
+    }
 }
