--- a/src/components/Landing page/ImageStyles.css
+++ b/src/components/Landing page/ImageStyles.css
@@ -30,11 +30,11 @@
     0% {
         border-radius: 50%;
     }
-    50% {
+    /* 50% {
         border-radius: 0px 94px;
-    }
+    } */
     100% {
-        border-radius: 50%;
+        border-radius: 0px 94px;
     }
 }
 
@@ -43,10 +43,10 @@
     0% {
         border-radius: 94px 0px;
     }
-    50% {
+    /* 50% {
         border-radius: 50%;
-    }
+    } */
     100% {
-        border-radius: 94px 0px;
+        border-radius: 50%;
     }
 }
