--- a/src/components/Buttons/Button.css
+++ b/src/components/Buttons/Button.css
@@ -11,6 +11,8 @@ button {
   border-radius: 50px;
   transition: background-color 0.3s;
   font-weight: 600;
+  animation: slideIn 1.5s ease-out forwards;
+  opacity: 0; 
 }
 button:hover {
   background-color: #ce7d02;
@@ -39,6 +41,16 @@ button:focus {
   color: white;
 }
 
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(150px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 .third-btn{
   border: 1.5px solid black;
   color:black;
