--- a/src/components/Landing page/ImageStyles.css
+++ b/src/components/Landing page/ImageStyles.css
@@ -4,18 +4,18 @@
     /* Add more styles as needed */
 }
 
-.hero-image {
+/* .hero-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border: 5px solid #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+} */
 
-.img-rounded {
-    width: 230px;
-    height: 230px;
-  
+.img-rounded1 {
+    width: 225px;
+    height: 225px;
+  border-radius: 50%;
     object-fit: cover;
     border: 5px solid #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -24,29 +24,66 @@
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
+.img-rounded {
+    width: 225px;
+    height: 225px;
+    border-radius: 94px 0px;
+    object-fit: cover;
+    border: 5px solid #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* animation-duration: 6s;
+    animation-delay: 0s; 
+    animation-iteration-count: infinite;
+    animation-direction: alternate; */
+}
 
 /* Animation for ImageComponent with initial borderRadius '50%' */
 @keyframes border-radius-animation-50 {
     0% {
+       
+        border-radius: 50%;
+         
+    }
+    50% {
         border-radius: 50%;
     }
-    /* 50% {
-        border-radius: 0px 94px;
-    } */
+    
     100% {
         border-radius: 0px 94px;
     }
+    
 }
 
 /* Animation for ImageComponent with initial borderRadius '94px 0px' */
 @keyframes border-radius-animation-94 {
     0% {
+       
+        border-radius: 94px 0px;
+         
+    }
+    50% {
         border-radius: 94px 0px;
     }
-    /* 50% {
-        border-radius: 50%;
-    } */
+    
     100% {
         border-radius: 50%;
     }
 }
+/* @media (max-width: 1024px) {
+    .img-rounded {
+  
+     
+        width: 150px;
+        height: 150px;
+      
+        object-fit: cover;
+        border: 5px solid #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        animation-duration: 6s;
+        animation-delay: 0s; 
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+    
+    }
+  } */
+  
