--- a/src/components/Landing page/HeroSection.css
+++ b/src/components/Landing page/HeroSection.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   padding: 50px;
-  background-color: #f8f8f8; 
+  background-color: #f1f6fb; 
 }
 
 .hero-content {
