--- a/src/components/Contact/CardContact.css
+++ b/src/components/Contact/CardContact.css
@@ -1,13 +1,11 @@
-
-
-
 .main_div {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: row; 
     /* align-items: center; */
     padding: 20px;
     width: 90%;
+    border: 2px solid black;
     
     
 }
@@ -16,17 +14,17 @@
     /* margin-bottom: 20px; */
     margin-top: 40px;
     /* border: 2px solid blue; */
-    width: 50%;
+    width: 40%;
 }
 
 .information h2 {
     font-size: 36px;
-     margin-bottom: 40px; 
+     margin-bottom: 45px; 
     /* border: 2px solid red; */
-    width: 30%;
+    width: 60%;
     font-family: sans-serif;
     font-size: 30px;
-    color: #0072ff;
+    /* color: black; */
 }
 
 /* .information p {
@@ -44,13 +42,14 @@
     width: 400px;
     padding: 30px;
     height: 130px;
-    /* border: 1px solid #ddd; */
-    border-radius: 10px;
+    /* border: 1px solid #c90808; */
+    border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 40px; 
+    margin-bottom: 45px; 
     align-items: center;
     transition: background-color 0.3s,transform 0.3s;
     margin-left: 50px;
+    
   
 }
 .card_div:hover{
@@ -58,7 +57,7 @@
 }
 @keyframes zoomOut{
     0% {
-      transform: scale(1); /* Initial scale */
+      transform: scale(1.03); /* Initial scale */
     }
     50% {
       transform: scale(1.05); /* Slightly larger scale */
@@ -68,11 +67,11 @@
     }
   }
 .card_div:hover {
-    background-color:#0072ff; /* Change to your desired hover background color */
+    background:linear-gradient(45deg, #00c6ff, #0072ff); /* Change to your desired hover background color */
     transform: scale(0.95);
 }
 .card_div:hover .icon_div {
-    background-color: white;
+    background-color: #fff;
 }
 
 .icon_div {
@@ -88,12 +87,12 @@
 
 .icon_div {
     flex: 0 0 auto;
-    padding: 10px;
+    padding: 7px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(147, 176, 235);
-    border-radius: 5px;
+    background-color: rgb(196, 212, 243);
+    border-radius: 10px;
 }
 
 .icon {
@@ -130,14 +129,15 @@
     transition: color 0.3s;
 }
 .card {
-    background: #f5f5f5;
-    border-radius: 10px;
+    background: #fff;
+    border-radius: 30px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 30px 30px;
-    width: 65%;
+    padding: 90px 50px;
+    width: 35%;
     position: relative;
+    
     /* border: 2px solid red; */
-    /* margin-top: 2%; */
+    margin-top: 3%;
 }
 
 .card:before {
@@ -145,42 +145,54 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 65px;
+    width: 70px;
     height: 70px;
-    background-color: #0072ff;
-    border-radius: 0 10px 0 100px;
+    background:linear-gradient(45deg, #00c6ff, #0072ff);
+    border-radius: 0 35px 0 100px;
 }
-.Form_div{
-    width: 50%;
+/* .Form_div{
+    width: 50%; */
     /* border: 1px solid black; */
-}
-.info_query{
+
+/* .info_query{
      margin-top: 5%; 
 }
 .info_query h2{
     font-size: 36px;
     margin-bottom: 10px; 
-   /* border: 2px solid red; */
+   border: 2px solid red;
    width: 50%;
    font-family: sans-serif;
    font-size: 20px;
-   color: #0072ff;
+   color: #0072ff; */
 
 
-}
-.info_query p{
+/* .info_query p{
     font-size: 16px;
     color: #555;
     /* margin-left: 10px; */
-    /* border: 2px solid black; */
+    /* border: 2px solid black;
     width: 50%;
     margin-bottom: 20px;
     font-size: 18px;  
-}
+} */
 .contact-btn{
     color: #fff;
-    padding: 10px 120px 10px 120px;
+    padding: 10px 120px 10px 110px;
     background: linear-gradient(45deg, #00c6ff, #0072ff);
     border-radius: 20px;
     border:none;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.vertical-line {
+    width: 1px;
+    height: 100px; /* Adjust the height as needed */
+    background-color: gray; /* Adjust the color as needed */
+    margin: 20% 20px; /* Adjust the horizontal margin as needed */
+  }
+.contact-btn:hover{
+  color: #fff;
+  border-color: #0072ff; /* Darker border color on hover */
+  box-shadow: 0 6px 12px rgba(0, 114, 255, 0.3); /* Subtle box shadow on hover */
 }
