--- a/src/components/Contact/TextArea.css
+++ b/src/components/Contact/TextArea.css
@@ -13,13 +13,14 @@
     width: 100%;
     max-width: 330px; 
     height: 130px; 
-    padding: 0.3rem; /* Adjusted padding */
+    padding: 0.5rem; /* Adjusted padding */
     font: size 0.9em;;
     border: none;
     outline: none;
-    border-radius: 4px;
+    border-radius: 15px;
     background-color: #fff;
     resize: none;
     box-sizing: border-box; /* Ensure padding is included in width/height */
+    box-shadow: 0 6px 12px rgba(175, 214, 244, 0.3);
   }
   
