--- a/src/components/moreFeatures/FlamingoComponent.css
+++ b/src/components/moreFeatures/FlamingoComponent.css
@@ -1,47 +1,14 @@
-/* 
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.download button {
-  background-color: #f90;
-  border: none;
-  color: #000;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.content {
-  display: flex;
-  align-items: center;
-  margin-top: 40px;
-}
-  */
-
 .list {
-  /* flex: 1; */
   margin-bottom: 20px;
 }
-
 .list ul {
   list-style: none;
   padding: 0;
 }
-
 .list ul li::before {
   content: '✔️';
   margin-right: 10px;
 } 
-
-
-
  .list ul {
   list-style: none;
   padding: 0;
@@ -56,44 +23,113 @@ nav ul li a {
   flex: 1;
   text-align: center;
 }
-
-
-/* .flamingo-container {
-  position: relative;
-  /* padding: 20px; 
-  width: 87%;
-} */
 .topLeft-btn {
   position: absolute;
   top: 10%;
-  /* left: 20px; */
 }
-
 .content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: end;
-  /* margin-top: 40px; */
 }
-
-
 .text h1 {
   font-size: 46px;
   margin: 0; 
 }
-
-
 .image img {
   width: 65%;
   vertical-align: bottom;
 }
-
 .png-img{
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
 }
-/* .text{
-  width: 20%;
-} */
+
+
+.split-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  list-style-type: none;
+  padding: 0;
+}
+
+.split-list li {
+  padding: 5px 10px;
+}
+
+.split-list li:nth-child(odd) {
+  grid-column: 1;
+}
+
+.split-list li:nth-child(even) {
+  grid-column: 2;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-column, .right-column {
+  flex: 1;
+  margin: 0 10px;
+  opacity: 0; /* Initial opacity for animation */
+  transform: translateX(0); /* Initial position for animation */
+  animation: slide-in 1s forwards; /* Apply animation */
+}
+
+.left-column {
+  animation-name: slide-in-left; /* Animation name for left column */
+}
+
+.right-column {
+  animation-name: slide-in-right; /* Animation name for right column */
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  padding: 5px 10px;
+}
+
+/* Keyframes for left column animation */
+@keyframes slide-in-left {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* Keyframes for right column animation */
+@keyframes slide-in-right {
+  0% {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
