--- a/src/components/problemWhy/why.css
+++ b/src/components/problemWhy/why.css
@@ -1,5 +1,5 @@
 .why-container {
-  width: 88%;
+  width: 89%;
   height: 80%;
   border-radius: 50px;
   border: 4px solid purple;
@@ -12,8 +12,8 @@
   justify-content: space-around;
 }
 .left{
-  width: 40%;
-  border: 1px solid white;
+  width: 88%;
+  /* border: 1px solid white; */
   /* display: flex; 
   flex-direction: column;
   justify-content: space-between;
@@ -48,7 +48,7 @@
 }
 .left__content__text {
   margin-top: clamp(24px, 2.5vw, 48px);
-  max-width: 530px;
+  max-width: 576px;
 }
 p{
   font-family: "DM Sans", sans-serif;
@@ -70,8 +70,8 @@ p{
 }
 
 .about-right {
-  border: 2px solid yellow;
-  width: 50%;
+  /* border: 2px solid yellow; */
+  width: 50%;  
   margin: 0;
 }
 
