--- a/src/components/problemWhy/why.css
+++ b/src/components/problemWhy/why.css
@@ -2,7 +2,7 @@
   width: 89%;
   height: 80%;
   border-radius: 50px;
-  border: 4px solid purple;
+  /* border: 4px solid white; */
   padding: 20px;
   color: white;
 }
