--- a/src/components/Contact/CardContact.css
+++ b/src/components/Contact/CardContact.css
@@ -5,7 +5,7 @@
     /* align-items: center; */
     padding: 20px;
     width: 90%;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     
     
 }
