--- a/src/components/Contact/TextArea.css
+++ b/src/components/Contact/TextArea.css
@@ -21,6 +21,6 @@
     background-color: #fff;
     resize: none;
     box-sizing: border-box; /* Ensure padding is included in width/height */
-    box-shadow: 0 6px 12px rgba(175, 214, 244, 0.3);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
   }
   
