--- a/src/components/Contact/CardContact.css
+++ b/src/components/Contact/CardContact.css
@@ -2,19 +2,21 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row; 
-    /* align-items: center; */
-    padding: 20px;
     width: 90%;
-    /* border: 2px solid black; */
-    
-    
+    height: 99%;
+    /* border: 2px solid black;    */
 }
 .Contact_info {
     text-align: center;
     /* margin-bottom: 20px; */
     margin-top: 40px;
     /* border: 2px solid blue; */
-    width: 40%;
+    width: 50%;
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 97%;   
 }
 
 .information h2 {
@@ -40,7 +42,7 @@
 .card_div {
     display: flex;
     width: 400px;
-    padding: 30px;
+    padding: 21px;
     height: 130px;
     /* border: 1px solid #c90808; */
     border-radius: 30px;
@@ -131,13 +133,14 @@
 .card {
     background: #fff;
     border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 90px 50px;
+    box-shadow: 0px 25px 80px rgba(59, 153, 207, 0.5);
+    padding: 44px 71px;
     width: 35%;
     position: relative;
-    
     /* border: 2px solid red; */
-    margin-top: 3%;
+    margin-top: 42px;
+    height: 89%;
+    margin-right: 2%;
 }
 
 .card:before {
