--- a/src/components/Contact/CardContact.css
+++ b/src/components/Contact/CardContact.css
@@ -132,7 +132,7 @@
 }
 .card {
     background: #fff;
-    border-radius: 30px;
+    border-radius: 15px;
     box-shadow: 0px 25px 80px rgba(59, 153, 207, 0.5);
     padding: 44px 71px;
     width: 35%;
@@ -140,7 +140,10 @@
     /* border: 2px solid red; */
     margin-top: 42px;
     height: 89%;
-    margin-right: 2%;
+    margin-right: 3%;
+    margin-left: 10%;
+    background:linear-gradient(45deg, #00c6ff, #0072ff); /* Change to your desired hover background color */
+
 }
 
 .card:before {
@@ -151,6 +154,7 @@
     width: 70px;
     height: 70px;
     background:linear-gradient(45deg, #00c6ff, #0072ff);
+    
     border-radius: 0 35px 0 100px;
 }
 /* .Form_div{
@@ -180,11 +184,11 @@
     font-size: 18px;  
 } */
 .contact-btn{
-    color: #fff;
-    padding: 10px 120px 10px 110px;
-    background: linear-gradient(45deg, #00c6ff, #0072ff);
-    border-radius: 20px;
-    border:none;
+    color: black;
+    padding: 10px 90px 10px 90px;
+    /* background: linear-gradient(45deg, #00c6ff, #0072ff); */
+    border-radius: 30px;
+    border: none;
     margin-top: 10px;
     cursor: pointer;
 }
@@ -196,6 +200,7 @@
   }
 .contact-btn:hover{
   color: #fff;
-  border-color: #0072ff; /* Darker border color on hover */
+  border-color: white; /* Darker border color on hover */
+  background: linear-gradient(45deg, #00c6ff, #0072ff);
   box-shadow: 0 6px 12px rgba(0, 114, 255, 0.3); /* Subtle box shadow on hover */
 }
