--- a/src/components/Contact/CardContact.css
+++ b/src/components/Contact/CardContact.css
@@ -8,20 +8,20 @@
 }
 .Contact_info {
     text-align: center;
-    /* margin-bottom: 20px; */
-    margin-top: 40px;
-    /* border: 2px solid blue; */
+    /* margin-bottom: 50px; */
+    margin-top: 5%;
+    /* border: 2px solid blue;  */
     width: 50%;
-    margin-top: 5px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 97%;   
+    height: 80%;
+    margin-left: 5px;   
 }
 
 .information h2 {
     font-size: 36px;
-     margin-bottom: 45px; 
+     margin-bottom: 35px; 
     /* border: 2px solid red; */
     width: 60%;
     font-family: sans-serif;
@@ -47,7 +47,7 @@
     /* border: 1px solid #c90808; */
     border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 45px; 
+    margin-bottom: 35px;
     align-items: center;
     transition: background-color 0.3s,transform 0.3s;
     margin-left: 50px;
@@ -133,15 +133,15 @@
 .card {
     background: #fff;
     border-radius: 15px;
-    box-shadow: 0px 25px 80px rgba(59, 153, 207, 0.5);
-    padding: 44px 71px;
-    width: 35%;
+    /* box-shadow: 0px 25px 80px rgba(59, 153, 207, 0.5); */
+    padding: 70px 60px;
+    width: 31%;
     position: relative;
     /* border: 2px solid red; */
-    margin-top: 42px;
-    height: 89%;
+    margin-top: 7%;
+    height: 78%;
     margin-right: 3%;
-    margin-left: 10%;
+    /* margin-left: 5%; */
     background:linear-gradient(45deg, #00c6ff, #0072ff); /* Change to your desired hover background color */
 
 }
@@ -185,7 +185,7 @@
 } */
 .contact-btn{
     color: black;
-    padding: 10px 90px 10px 90px;
+    padding: 10px 135px 10px 135px;
     /* background: linear-gradient(45deg, #00c6ff, #0072ff); */
     border-radius: 30px;
     border: none;
@@ -197,6 +197,7 @@
     height: 100px; /* Adjust the height as needed */
     background-color: gray; /* Adjust the color as needed */
     margin: 20% 20px; /* Adjust the horizontal margin as needed */
+    margin-right: 15%;
   }
 .contact-btn:hover{
   color: #fff;
