--- a/src/components/Header/Header1.css
+++ b/src/components/Header/Header1.css
@@ -204,4 +204,16 @@
 
 .nav.scrolled {
     box-shadow: 0 0 20px rgba(0, 0, 255, 0.5), 0 0 40px rgba(0, 0, 255, 0.3), 0 0 60px rgba(0, 0, 255, 0.2), 0 0 80px rgba(0, 0, 255, 0.1); /* Blue glow effect when scrolled */
+    /* transition: background-color 0.3s ease; /* Smooth transition for color change */
+    /* box-shadow: 0 0 10px rgba(255, 255, 255, 0); /* Initial box shadow (no glow) */
 }
+/* .nav.scrolled.glow{
+    animation: glow 1.5s ease-in-out infinite alternate;
+}
+@keyframes glow{
+    0% {
+        box-shadow: 0 0 10px rgba(232, 9, 9, 0);
+      }
+      100% {
+        box-shadow: 0 0 20px rgb(242, 51, 51); /* Adjust glow intensity */
+      
