--- a/src/components/Landing page/TextAnimation.css
+++ b/src/components/Landing page/TextAnimation.css
@@ -4,8 +4,7 @@
     font-weight: bold;
     color: #333;
     white-space: nowrap;
-    /* animation: slideIn 1.5s ease-out forwards;
-    opacity: 0;  */
+   
   }
   
   .animated-text {
@@ -15,6 +14,7 @@
   }
   
   .animated-text span {
+   
     opacity: 0;
     animation: letter-animation 3.5s infinite;
     animation-delay: 0s;
@@ -48,19 +48,19 @@
   @keyframes letter-animation {
     0% {
       opacity: 0;
-      /* transform: translateY(0px); */
+    
     }
     10%, 90% {
       opacity: 1;
-      /* transform: translateY(0); */
+   
     }
     100% {
       opacity: 0;
-      /* transform: translateY(0); */
+      
     }
   }
   
-  /* @keyframes slideIn {
+  @keyframes slideIn {
     0% {
       opacity: 0;
       transform: translateY(150px);
@@ -69,4 +69,4 @@
       opacity: 1;
       transform: translateY(0);
     }
-  } */
+  }
