--- a/src/components/Landing page/TextAnimation.css
+++ b/src/components/Landing page/TextAnimation.css
@@ -7,13 +7,7 @@
    
   }
   
-  .animated-text{
-    display: inline-block;
-    position: relative;
-    animation: text-animation 8s infinite;
-    animation: slideIn 1.5s ease-out forwards;
-    /* opacity: 0; */
-  }
+  
   
   .animated-text span {
    
@@ -72,4 +66,11 @@
       opacity: 1;
       transform: translateY(0);
     }
+  }
+  .animated-text{
+    display: inline-block;
+    position: relative;
+    animation: text-animation 8s infinite;
+    animation: slideIn 1.5s ease-out forwards;
+    opacity: 0;
   }
