--- a/src/components/WhatSection/Whatk.css
+++ b/src/components/WhatSection/Whatk.css
@@ -1,9 +1,9 @@
-body {
+/* body {
   font-family: "Roboto Condensed", sans-serif;
   color: #000;
   line-height: 24px;
   font-size: 16px;
-}
+} */
 
 .bio {
   display: grid;
