--- a/src/components/Header/Header1.css
+++ b/src/components/Header/Header1.css
@@ -31,6 +31,7 @@
 .header.scrolled {
     left: 50%;
     width: 3.8%;
+    box-shadow: 0 6px 40px rgba(0, 72, 255, 0.2);
 }
 
 .nav {
@@ -44,10 +45,18 @@
     list-style-type: none;
     display: flex;
     padding: 0;
+    
 }
 
 .menu li {
     margin-right: 20px;
+    transition: all 0.3s ease-in;
+}
+
+.menu li:hover{
+    color: #1f66ff;
+    cursor: pointer;
+    transform: translateY(-3px);
 }
 
 .logo {
