--- a/src/components/Landing page/TextAnimation.css
+++ b/src/components/Landing page/TextAnimation.css
@@ -2,7 +2,7 @@
     display: inline;
     font-size: 24px;
     font-weight: bold;
-    color: #333;
+    color: #333 !important;
     white-space: nowrap;
    
   }
