--- a/src/components/Contact/Input.css
+++ b/src/components/Contact/Input.css
@@ -15,7 +15,7 @@
     height: 40px; /* Adjusted height */
     padding: 0.5rem ; /* Adjusted padding */
     font-size: 0.9rem;
-    border: none;
+    border: 1px solid #0072ff ;
     outline: none;
     border-radius: 10px;
     background-color: #fff;
