--- a/src/components/Header/Header1.css
+++ b/src/components/Header/Header1.css
@@ -29,7 +29,7 @@
     transition: left 0.3s ease, width 0.3s ease, background-color 0.3s ease, border-radius 0.3s ease, background 0.3s ease, backdrop-filter 0.3s ease, -webkit-backdrop-filter 0.3s ease, margin-top 0.3s ease, box-shadow 0.3s ease;
 }
 .header.scrolled {
-    left: 50%;
+    left: 48%;
     width: 3.8%;
     box-shadow: 0 6px 40px rgba(0, 72, 255, 0.2);
 }
@@ -63,6 +63,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     cursor: pointer;
+    margin-right: 8%;
 }
 
 .btn {
