--- a/src/components/Contact/CardContact.css
+++ b/src/components/Contact/CardContact.css
@@ -25,9 +25,29 @@
     /* border: 2px solid red; */
     width: 60%;
     font-family: sans-serif;
+    /* animation: blink 1s infinite; */
     font-size: 30px;
     /* color: black; */
 }
+/* .custom-bullet-contact {
+    display: inline-block;
+    width: 10px; 
+    height: 10px; 
+    background-color: black;
+    border-radius: 50%; 
+    margin-right: 5px; 
+    animation: blink 1s infinite;
+    vertical-align: middle; 
+  }
+  @keyframes blink {
+    0%, 50% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+   */
 
 /* .information p {
     font-size: 16px;
