--- a/src/components/Section/Highlights.css
+++ b/src/components/Section/Highlights.css
@@ -72,8 +72,17 @@
   font-size: 32px;
   font-family: 'DM Sans', sans-serif;
   margin-left:50px;
-  animation: blink 1s infinite;
   color: black;
+}
+.custom-bullet-highlights {
+  display: inline-block;
+  width: 10px; 
+  height: 10px; 
+  background-color: black;
+  border-radius: 50%; 
+  margin-right: 5px; 
+  animation: blink 1s infinite;
+  vertical-align: middle; 
 }
 @keyframes blink {
   0%, 50% {
@@ -83,7 +92,6 @@
     opacity: 1;
   }
 }
-
 
 
 .highlight-card:hover {
